--- a/index.html
+++ b/index.html
@@ -11,23 +11,10 @@
 </head>
 
 <body>
-
-    <!-- data-bind-global="count" : Affiche le nombre total de rapports (métadonnées globales) -->
-    <!--<h1 data-bind-global="count"></h1>-->
-
-    <!-- id="teamList" : Conteneur où seront ajoutés dynamiquement les éléments de l'équipe. Le nom de cet ID ne doit pas être modifié. -->
-    <!-- <section id="teamList">
-    </section> -->
-
-    
-
-
-
-
     <section id="hero">
         <div>
             <h1>Découvrez le premier rapport sur le digital des clubs de foot romands.</h1>
-            <a href="#form"></a><button>TELECHARGER</button></a>
+            <a href="#form"><button>ACCÉDER GRATUITEMENT AU RAPPORT</button></a>
         </div>
         <img src="image/tuiliere.jpg" alt="Stade de la Tuilière">
     </section>
@@ -121,17 +108,17 @@
 
     <section id="stats">
         <div>
-            <p>La majorité des clubs ont une présence digitale... mais très peu l’exploitent réellement</p>
+            <h3 class="counter" data-bind-global="count"></h3>
+            <p>Équipes analysées</p>
         </div>
         <div class="column-template">
             <h3>1 club sur 3</h3>
             <p>Utilise des outils de suivi (analytics)</p>
         </div>
         <div>
-            <h3>-20%</h3>
-            <p class="margin-left-paragraph">Proposent une newsletter</p>
+            <p>La majorité des clubs ont une présence digitale... mais très peu l’exploitent réellement</p>
         </div>
-        <div>
+        <div class="volunteer">
             <h3>60%</h3>
             <p class="margin-left-paragraph">Fonctionnent avec une structure bénévole</p>
         </div>
@@ -143,23 +130,30 @@
 
     <section id="form">
         <div>
-        <h2>ACCEDER AU RAPPORT</h2>
-        <!-- id="downloadForm" : Formulaire pour télécharger le PDF. Le nom de cet ID ne doit pas être modifié. -->
-        <form id="downloadForm">
-            <input type="text" name="firstName" placeholder="PRENOM">
-            <input type="text" name="lastName" placeholder="NOM">
-            <input type="email" name="email" placeholder="EMAIL">
-            <div class="checkbox-row">
-                <input type="checkbox" name="newsletterAgreement" id="consent">
-                <label for="consent">J’ACCEPTE DE RECEVOIR DES EMAILS PROMOTIONNELS</label>
-            </div>
-            <button type="submit">ACCEDER AU RAPPORT</button>
-        </form>
+            <h2>ACCÉDER AU RAPPORT</h2>
+            <!-- id="downloadForm" : Formulaire pour télécharger le PDF. Le nom de cet ID ne doit pas être modifié. -->
+            <form id="downloadForm">
+                <input type="text" name="firstName" placeholder="PRENOM">
+                <input type="text" name="lastName" placeholder="NOM">
+                <input type="email" name="email" placeholder="EMAIL">
+                <div class="checkbox-row">
+                    <input type="checkbox" name="newsletterAgreement" id="consent" checked>
+                    <label for="consent">J’ACCEPTE DE RECEVOIR DES EMAILS PROMOTIONNELS</label>
+                </div>
+                <button type="submit">TÉLÉCHARGER</button>
+            </form>
         </div>
         <!-- id="messageContainer" : Conteneur pour afficher les messages de succès ou d'erreur. Le nom de cet ID ne doit pas être modifié. -->
         <div id="messageContainer"></div>
     </section>
 
+    <section id="footer">
+        <div>
+            <a href="mailto:samuel.champod@heig-vd.ch">samuel.champod@heig-vd.ch</a>
+            <a href="mailto:matteo.stancataza@heig-vd.ch">matteo.stancataza@heig-vd.ch</a>
+        </div>
+        <p>&copy; Copyright 2026</p>
+    </section>
 </body>
 
 </html>
